# robot-controller

./: CMakeLists.txt
Configuration/: RobotConfiguration.yaml
include/: Error.hpp  Logger.hpp  Robot.hpp  main.hpp
orocos-library/Headers/: chain.hpp  config.h  framevel.hpp  ldl_solver_eigen.hpp  svd_HH.hpp
orocos-library/Headers/utilities/: utility.h
orocos-library/Resources/: chain.cpp  ldl_solver_eigen.cpp  path_circle.cpp  path_line.cpp  path_roundedcomposite.cpp
src/: Error.cpp  Logger.cpp  Robot.cpp  main.cpp
